[gd_scene load_steps=3 format=3 uid="uid://cupbrbut83ok"]

[ext_resource type="Theme" uid="uid://bxjb6x8f4oty5" path="res://sources/ui/theme/ui_theme.tres" id="1_r54fd"]
[ext_resource type="Script" path="res://sources/ui/lobby/lobby.gd" id="2_28n12"]

[node name="Lobby" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_r54fd")
script = ExtResource("2_28n12")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="ChunkLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Chunks:"

[node name="SpinBoxX" type="SpinBox" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
max_value = 99.0
value = 8.0
alignment = 1

[node name="SpinBoxY" type="SpinBox" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
max_value = 99.0
value = 6.0
alignment = 1

[node name="SpinBoxZ" type="SpinBox" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
max_value = 99.0
value = 8.0
alignment = 1

[node name="StatusLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Hosting
"
horizontal_alignment = 1

[node name="PlayersLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Connected Players:
- me"
horizontal_alignment = 1

[node name="LeaveButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Leave Lobby"

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Start Game"

[connection signal="pressed" from="VBoxContainer/LeaveButton" to="." method="_on_leave_button_pressed"]
[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
